fixed page vars, updated tests, cleanup

--- a/test/expected/default.html
+++ b/test/expected/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>default page</title>
+  <title>default page title</title>
 </head>
 <body>
   <div class="content">
@@ -14,7 +14,7 @@
           <a href="inner.html">inner</a>
         </li>
     </ul>
-    <p>default page</p>
+    <p>Hello There!</p>
     <p>main demo text</p>
   </div>
 </body>
