added subfolder functionality for pages and special layouts for subfolders

--- a/test/expected/default.html
+++ b/test/expected/default.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>default page title</title>
+	<meta charset="utf-8">
+	<title>default page title</title>
 </head>
 <body>
-  <div class="content">
-    <ul>
-        <li>
-          <a href="index.html">main</a>
-        </li>
-        <li>
-          <a href="inner.html">inner</a>
-        </li>
-    </ul>
-    <p>Hello There!</p>
-    <p>main demo text</p>
-  </div>
+	<div class="content">
+		<h1>Main Page Layout</h1>
+		<p>Hello There!</p>
+		<p>main demo text</p>
+		<ul>
+			<li>
+				<a href="subproject1/index.html">sub project one</a>
+			</li>
+			<li>
+				<a href="subproject2/index.html">sub project two</a>
+			</li>
+		</ul>
+	</div>
 </body>
 </html>
