added sub.sub... folder feature

--- a/test/expected/subproject2/index.html
+++ b/test/expected/subproject2/index.html
@@ -10,6 +10,7 @@
 		<p>Hello Subproject2!</p>
 		<hr>partial<hr>
 		<p>subproject2 demo text</p>
+		<a href="evensubbier/info.html">another subfolder</a>
 		<a href="../default.html">back to overview</a>
 	</div>
 </body>
